--- a/package.json
+++ b/package.json
@@ -7,15 +7,21 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": ["pdf", "compression", "merge"],
+  "keywords": [
+    "pdf",
+    "compression",
+    "merge"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "multer": "^2.0.0-rc.4",
     "pdf-lib": "^1.17.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "pdf-parse": "^1.1.1",
+    "sharp": "^0.34.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
